main pages added

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^10.0.0",
+    "react-router-dom": "^7.10.1",
+
+
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
