--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,14 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^12.23.25",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.10.1",
-
-
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
